--- a/asset/index.less
+++ b/asset/index.less
@@ -1,8 +1,14 @@
 .oxmod-oxm-icons-apple{
+  width:100%;
+  overflow: hidden;
+  .page-container {
+    display: flex;
+  }
   /* CSS */
-  .icon-row{
+  .icon-page{
     display: flex;
     flex-wrap: wrap;
+    width:100%;
   }
   .icon{
     text-align: center;
@@ -26,4 +32,44 @@
     text-decoration: none;
     color:#666;
   }
+
+
+  .dot{
+    width:10px;
+    height:10px;
+    border-radius: 50%;
+    display: inline-block;
+    background-color: rgba(100,100,100,.8);
+    margin:2px;
+  }
+
+  .index-dots{
+    height:20px;
+    text-align: center;
+    position: fixed;
+    width:100%;
+    left:0;
+    bottom:10px;
+  }
+  .marquee-win{
+    transition: all 1s;
+  }
+  .loop(@n, @i: 1) when (@i =< @n) {
+
+    [data-on="@{i}"]{
+      .dot:nth-child(@{i}){
+        background-color: rgba(255,100,0,.8);
+      }
+      .marquee-win{
+        transform: translate((@i * -100% + 100%),0);
+      }
+    }
+    .loop(@n,(@i + 1));    // next iteration
+  }
+
+  .loop(10);
+
 }
+
+
+
