--- a/asset/index.css
+++ b/asset/index.css
@@ -1,9 +1,15 @@
 .oxmod-oxm-icons-apple {
+  width: 100%;
+  overflow: hidden;
   /* CSS */
 }
-.oxmod-oxm-icons-apple .icon-row {
+.oxmod-oxm-icons-apple .page-container {
+  display: flex;
+}
+.oxmod-oxm-icons-apple .icon-page {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
 }
 .oxmod-oxm-icons-apple .icon {
   text-align: center;
@@ -24,4 +30,83 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.oxmod-oxm-icons-apple .dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: rgba(100, 100, 100, 0.8);
+  margin: 2px;
+}
+.oxmod-oxm-icons-apple .index-dots {
+  height: 20px;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  bottom: 10px;
+}
+.oxmod-oxm-icons-apple .marquee-win {
+  transition: all 1s;
+}
+.oxmod-oxm-icons-apple [data-on="1"] .dot:nth-child(1) {
+  background-color: rgba(255, 100, 0, 0.8);
+}
+.oxmod-oxm-icons-apple [data-on="1"] .marquee-win {
+  transform: translate(0%, 0);
+}
+.oxmod-oxm-icons-apple [data-on="2"] .dot:nth-child(2) {
+  background-color: rgba(255, 100, 0, 0.8);
+}
+.oxmod-oxm-icons-apple [data-on="2"] .marquee-win {
+  transform: translate(-100%, 0);
+}
+.oxmod-oxm-icons-apple [data-on="3"] .dot:nth-child(3) {
+  background-color: rgba(255, 100, 0, 0.8);
+}
+.oxmod-oxm-icons-apple [data-on="3"] .marquee-win {
+  transform: translate(-200%, 0);
+}
+.oxmod-oxm-icons-apple [data-on="4"] .dot:nth-child(4) {
+  background-color: rgba(255, 100, 0, 0.8);
+}
+.oxmod-oxm-icons-apple [data-on="4"] .marquee-win {
+  transform: translate(-300%, 0);
+}
+.oxmod-oxm-icons-apple [data-on="5"] .dot:nth-child(5) {
+  background-color: rgba(255, 100, 0, 0.8);
+}
+.oxmod-oxm-icons-apple [data-on="5"] .marquee-win {
+  transform: translate(-400%, 0);
+}
+.oxmod-oxm-icons-apple [data-on="6"] .dot:nth-child(6) {
+  background-color: rgba(255, 100, 0, 0.8);
+}
+.oxmod-oxm-icons-apple [data-on="6"] .marquee-win {
+  transform: translate(-500%, 0);
+}
+.oxmod-oxm-icons-apple [data-on="7"] .dot:nth-child(7) {
+  background-color: rgba(255, 100, 0, 0.8);
+}
+.oxmod-oxm-icons-apple [data-on="7"] .marquee-win {
+  transform: translate(-600%, 0);
+}
+.oxmod-oxm-icons-apple [data-on="8"] .dot:nth-child(8) {
+  background-color: rgba(255, 100, 0, 0.8);
+}
+.oxmod-oxm-icons-apple [data-on="8"] .marquee-win {
+  transform: translate(-700%, 0);
+}
+.oxmod-oxm-icons-apple [data-on="9"] .dot:nth-child(9) {
+  background-color: rgba(255, 100, 0, 0.8);
+}
+.oxmod-oxm-icons-apple [data-on="9"] .marquee-win {
+  transform: translate(-800%, 0);
+}
+.oxmod-oxm-icons-apple [data-on="10"] .dot:nth-child(10) {
+  background-color: rgba(255, 100, 0, 0.8);
+}
+.oxmod-oxm-icons-apple [data-on="10"] .marquee-win {
+  transform: translate(-900%, 0);
 }
