--- a/asset/index.css
+++ b/asset/index.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  align-items: flex-start;
 }
 .oxmod-oxm-icons-apple .icon {
   text-align: center;
