--- a/asset/index.css
+++ b/asset/index.css
@@ -1,3 +1,9 @@
+.oxmod-oxm-icons-apple,
+html,
+body,
+.layout {
+  height: 100%;
+}
 .oxmod-oxm-icons-apple {
   width: 100%;
   overflow: hidden;
@@ -27,7 +33,7 @@
 }
 .oxmod-oxm-icons-apple .icon img {
   width: 50px;
-  border-radius: 50%;
+  border-radius: 20%;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
