--- a/asset/index.less
+++ b/asset/index.less
@@ -1,3 +1,7 @@
+.oxmod-oxm-icons-apple,
+html,body,.layout{
+  height:100%;
+}
 .oxmod-oxm-icons-apple{
   width:100%;
   overflow: hidden;
@@ -24,7 +28,7 @@
     }
     img{
       width:50px;
-      border-radius: 50%;
+      border-radius: 20%;
       background-position: center center;
       background-repeat: no-repeat;
       background-size:cover;
