call oxmjs-flip

--- a/asset/index.css
+++ b/asset/index.css
@@ -54,8 +54,8 @@ body,
   left: 0;
   bottom: 10px;
 }
-.oxmod-oxm-icons-apple .marquee-win {
-  transition: all 1s;
+.oxmod-oxm-icons-apple .transition {
+  transition: all .2s;
 }
 .oxmod-oxm-icons-apple [data-on="1"] .dot:nth-child(1) {
   background-color: rgba(255, 100, 0, 0.8);
