--- a/asset/index.less
+++ b/asset/index.less
@@ -56,8 +56,8 @@ html,body,.layout{
     left:0;
     bottom:10px;
   }
-  .marquee-win{
-    transition: all 1s;
+  .transition{
+    transition: all .2s;
   }
   .loop(@n, @i: 1) when (@i =< @n) {
 
